--- a/.github/workflows/backend.yaml
+++ b/.github/workflows/backend.yaml
@@ -42,7 +42,7 @@ jobs:
         with:
           task-definition: task-definition.json
           container-name: novices-ranking
-          image: $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          image: ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/novices/ranking:latest
 
       - name: Deploy Amazon ECS task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
